XWIKI-17828: Add support for clustering tests